<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_width="match_parent"
        android:text="@string/app_forgot_password_title"
        android:textSize="32sp"
        android:textAlignment="center"
        android:textColor="@color/custom_app_theme" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_width="wrap_content"
        android:text="@string/app_reset_email_title"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatEditText
        android:background="@drawable/custom_edt_txt"
        android:id="@+id/email_forgot_password"
        android:hint="@string/app_reset_email_hint"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:layout_width="match_parent"
        android:maxWidth="450dp"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:backgroundTint="@color/custom_app_theme"
        android:background="@drawable/custom_edt_txt"
        android:id="@+id/btn_resetPassword"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_width="wrap_content"
        android:paddingStart="14dp"
        android:paddingEnd="15dp"
        android:text="@string/app_reset_password"
        android:textSize="18sp"
        android:textColor="@color/textColor" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_fp_back_to_login"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/app_back_to_login"
        android:textAlignment="center"
        android:textColor="@color/custom_app_theme"
        android:textSize="16sp"
        android:visibility="gone" />

</androidx.appcompat.widget.LinearLayoutCompat>