<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_forgot_password_title"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:layout_width="match_parent"
            android:text="@string/app_forgot_password_title"
            android:textSize="32sp"
            android:textAlignment="center"
            android:textColor="@color/custom_app_theme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_forgot_password_message"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_width="wrap_content"
            android:text="@string/app_reset_email_title"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/txt_forgot_password_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_forgot_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/txt_forgot_password_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:background="@drawable/custom_edt_txt"
                android:id="@+id/email_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_reset_email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:backgroundTint="@color/custom_app_theme"
            android:background="@drawable/custom_edt_txt"
            android:id="@+id/btn_resetPassword"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_width="wrap_content"
            android:paddingStart="14dp"
            android:paddingEnd="15dp"
            android:text="@string/app_reset_password"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            app:layout_constraintTop_toBottomOf="@id/email_forgot_password_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_fp_back_to_login"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="36dp"
            android:text="@string/app_back_to_login"
            android:textAlignment="center"
            android:textColor="@color/custom_app_theme"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/btn_resetPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>