<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- App Header Name -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cl_login_signup_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/custom_app_theme"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Card View -->
        <androidx.cardview.widget.CardView
            android:backgroundTint="#f5f5f5"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/cl_login_signup_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Card View Layout -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <!-- Card View Login SignUp Tab Layout -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <!-- Login Tab -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:background="@drawable/custom_switch_tracks"
                        android:id="@+id/tv_login"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="5dp"
                        android:text="@string/app_login"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="24sp"
                        android:textStyle="bold|normal" />

                    <!-- Sign Up Tab -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_signup"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="5dp"
                        android:text="@string/app_sign_up"
                        android:textAlignment="center"
                        android:textColor="@color/custom_app_theme"
                        android:textSize="24sp"
                        android:textStyle="bold|normal" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- Login Form -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:gravity="center"
                    android:id="@+id/ll_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp" >

                    <!-- Email Input -->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:background="@drawable/custom_edt_txt"
                        android:drawableStart="@drawable/ic_email"
                        android:ems="10"
                        android:hint="@string/app_email"
                        android:id="@+id/edt_email_login"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:minHeight="48dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <!-- Password Input -->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:background="@drawable/custom_edt_txt"
                        android:drawableStart="@drawable/ic_password_login"
                        android:ems="10"
                        android:hint="@string/app_password"
                        android:id="@+id/edt_password_login"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:minHeight="48dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <!-- Forget Password TextView -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_forget_password"
                        android:layout_gravity="end"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/app_forget_password"
                        android:textAlignment="textEnd"
                        android:textColor="#616161"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- SignUp Form -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:gravity="center"
                    android:id="@+id/ll_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:visibility="gone" >

                    <!-- Email Input -->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:background="@drawable/custom_edt_txt"
                        android:drawableStart="@drawable/ic_email"
                        android:ems="10"
                        android:hint="@string/app_email"
                        android:id="@+id/edt_email_signup"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:minHeight="48dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <!-- Password Input -->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:background="@drawable/custom_edt_txt"
                        android:drawableStart="@drawable/ic_password_signup"
                        android:ems="10"
                        android:hint="@string/app_password"
                        android:id="@+id/edt_password_signup"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:minHeight="48dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <!-- Confirm Password Input -->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:background="@drawable/custom_edt_txt"
                        android:drawableStart="@drawable/ic_password_signup"
                        android:ems="10"
                        android:hint="@string/app_confirm_password"
                        android:id="@+id/edt_confirm_password_signup"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:minHeight="48dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- Login or SignUp Button -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/custom_btn_50"
                    android:elevation="15dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:text="@string/app_login"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    app:backgroundTint="@color/custom_app_theme" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>